--- a/app/less/main.less
+++ b/app/less/main.less
@@ -9,6 +9,7 @@
 @import 'blocks/_raiting.less';
 @import 'blocks/_cards.less';
 @import "blocks/_owl-theme-first-slider.less";
+@import "blocks/_block-all-descript";
 
 
 /*style page*/
@@ -16,3 +17,4 @@
 @import 'sections/_auto-shop.less';
 @import 'sections/_cards-analog.less';
 @import 'sections/_footer.less';
+@import "sections/_description-product.less";
