--- a/app/less/base/_base.less
+++ b/app/less/base/_base.less
@@ -24,6 +24,13 @@ h4{
 	font-size: 20px;
 	font-weight: 700;
 }
+.title3{
+	font-size: 16px;
+	font-weight: 700;
+}
 .flex-group{
 	display: flex;
+}
+.border-bottom{
+	border-bottom: 1px solid #eff0f3;
 }
