--- a/app/less/sections/_description-product.less
+++ b/app/less/sections/_description-product.less
@@ -120,6 +120,9 @@
       line-height: 1.6em;
       margin-bottom: 15px;
     }
+    .mb20{
+      margin-bottom: 20px;
+    }
     .reviews-content__advantages{
       margin-bottom: 20px;
       span{
