--- a/app/less/sections/_cards-analog.less
+++ b/app/less/sections/_cards-analog.less
@@ -75,6 +75,25 @@
         }
       }
     }
+    .button-buy__compare{
+      justify-content: flex-start;
+      align-items: center;
+      .button-buy{
+        padding: 12px 35px 15px 40px;
+        background-color: @hover-nav;
+        font-size: 15px;
+        color: white;
+        cursor: pointer;
+        margin: 15px 0;
+        margin-right: 45px;
+      }
+      .compare{
+        margin-top: -15px;
+      }
+    }
+    .rating-container-wrap{
+      justify-content: space-between;
+    }
   }
 }
 .analog-products__cards-action{
