--- a/app/less/base/_base.less
+++ b/app/less/base/_base.less
@@ -20,6 +20,10 @@ h1{
 h4{
 	font-size: 13px;
 }
+.title1{
+	font-size: 28px;
+	font-weight: 700;
+}
 .title2{
 	font-size: 20px;
 	font-weight: 700;
@@ -36,4 +40,7 @@ h4{
 }
 .mb20{
 	margin-bottom: 20px;
+}
+.mr0{
+	margin-right: 0;
 }
