навигация на нижній слайдер

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -10,6 +10,7 @@
 @import 'blocks/_cards.less';
 @import "blocks/_owl-theme-first-slider.less";
 @import "blocks/_block-all-descript";
+@import 'blocks/_filter-nav.less';
 
 
 /*style page*/
