--- a/app/less/sections/_description-product.less
+++ b/app/less/sections/_description-product.less
@@ -36,6 +36,7 @@
     overflow: hidden;
   }
   .description-product__characteristics{
+    width: 930px;
     .description-product__characteristics-title{
       margin-bottom: 15px;
     }
@@ -57,6 +58,7 @@
     }
   }
   .description-product__product-description{
+    width: 930px;
     p{
       margin-top: 15px;
       margin-bottom: 30px;
@@ -69,6 +71,7 @@
     }
   }
   .description-product__reviews{
+    width: 930px;
     .description-product__reviews-nav{
       display: flex;
       justify-content: space-between;
@@ -95,6 +98,7 @@
     }
   }
   .description-product__reviews-content{
+    width: 930px;
     display: flex;
     padding: 30px;
     border: 1px solid @color-cod-product;
@@ -199,6 +203,7 @@
     }
   }
   .description-product__video-reviews{
+    width: 930px;
     margin-bottom: 40px;
     .video-reviews__title{
       margin-bottom: 10px;
@@ -216,6 +221,7 @@
     }
   }
   .wrap-articles-content{
+    width: 930px;
     display: flex;
     justify-content: flex-start;
   }
@@ -254,6 +260,7 @@
     }
   }
   .description-product__certificates{
+    width: 930px;
     margin-bottom: 75px;
     .description-product__certificates-title{
       margin-bottom: 10px;
@@ -263,4 +270,7 @@
       justify-content: space-between;
     }
   }
+}
+#filter-project .mix{
+  display: none;
 }
